<resources>
    <!-- уже существующие строки -->
    <string name="app_name">Playlist Maker</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="coming_soon">Еще рано</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="support_email">maxim.lishuck@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="error_no_connection">Проблемы со связью\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="track_artwork">Обложка трека</string>
    <string name="more">Подробнее</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="back">Назад</string>
    <string name="track_name">Название трека</string>
    <string name="artist_name">Исполнитель</string>
    <string name="track_duration">Длительность</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="track_list_play">Вы не создали\n ни одного плейлиста</string>
    <string name="tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="player">Плеер</string>
    <string name="unknown_album">Неизвестный альбом</string>
    <string name="unknown_year">Неизвестно</string>
    <string name="unknown_genre">Неизвестно</string>
    <string name="unknown_country">Неизвестно</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="play">Воспроизвести</string>
    <string name="favorite">В избранное</string>
    <string name="time_zero">00:00</string>
    <string name="name_media">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_emty">Ваша медиатека пуста</string>
    <string name="new_pl">Новый плейлист</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites">tets</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="finish_playlist_creation_title">Завершить создание плейлиста?</string>
    <string name="finish_playlist_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="playlist_info">%1$s минут • %2$s</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="empty_playlist_share_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="remove_track_message">Хотите удалить трек?</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист «%s»?</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_edit">Редактировать информацию</string>
    <string name="menu_delete">Удалить плейлист</string>
    <string name="dialog_no">Нет</string>
    <string name="dialog_yes">Да</string>
    <string name="edit_playlist_title">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="delete_playlist_cancel">НЕТ</string>
    <string name="delete_playlist_confirm">ДА</string>
    <string name="empty_playlist_tracks">В этом плейлисте нет треков</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>


</resources>