<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaFragment">

    <!-- Search -->
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.presentation.search.fragment.SearchFragment"
        android:label="@string/search">

        <action
            android:id="@+id/action_searchFragment_to_audioPlayerFragment"
            app:destination="@id/audioPlayerFragment" />
    </fragment>

    <!-- Media -->
    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.example.playlistmaker.presentation.media.fragment.MediaFragment"
        android:label="@string/media_library">

        <action
            android:id="@+id/action_mediaFragment_to_playlistFragment"
            app:destination="@id/playlistFragment" />

    </fragment>

    <!-- Settings -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.presentation.setting.fragment.SettingsFragment"
        android:label="@string/settings" />

    <!-- Audio Player -->
    <fragment
        android:id="@+id/audioPlayerFragment"
        android:name="com.example.playlistmaker.presentation.player.fragment.AudioPlayerFragment"
        android:label="@string/player">

        <argument
            android:name="track"
            app:argType="com.example.playlistmaker.domain.models.Track" />

        <action
            android:id="@+id/action_audioPlayerFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
    </fragment>

    <!-- Create Playlist -->
    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.example.playlistmaker.presentation.playlist.fragment.CreatePlaylistFragment"
        android:label="CreatePlaylistFragment" />

    <!-- Playlist -->
    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.example.playlistmaker.presentation.playlist.fragment.PlaylistFragment"
        android:label="Плейлист"
        tools:layout="@layout/fragment_playlist_info">

        <action
            android:id="@+id/action_playlistFragment_to_audioPlayerFragment"
            app:destination="@id/audioPlayerFragment" />

        <action
            android:id="@+id/action_playlistFragment_to_editPlaylistFragment"
            app:destination="@id/editPlaylistFragment" />

        <argument
            android:name="playlistId"
            app:argType="long" />
    </fragment>

    <!-- Edit Playlist -->
    <fragment
        android:id="@+id/editPlaylistFragment"
        android:name="com.example.playlistmaker.presentation.playlist.fragment.EditPlaylistFragment"
        android:label="Редактировать">
        <argument
            android:name="playlistId"
            app:argType="long" />
    </fragment>

</navigation>