<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".presentation.playlist.fragment.CreatePlaylistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            android:layout_width="match_parent"
            android:background="@color/background"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/new_playlist" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingTop="26dp"
            android:paddingEnd="24dp">

            <FrameLayout
                android:id="@+id/coverContainer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/coverBackground"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:background="@drawable/bg_add_playlist"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_add_playlist" />

                <ImageView
                    android:id="@+id/coverAddIcon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_addd_playlist" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="29dp"
            android:paddingEnd="24dp">

            <EditText
                android:id="@+id/playlistNameEditText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_input_mediaplayer"
                android:gravity="center_vertical"
                android:hint="@string/name_media"
                android:inputType="text"
                android:textCursorDrawable="@drawable/cursor_blue"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:textColor="@color/albumText"
                android:textColorHint="@color/albumText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/playlistDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_input_mediaplayer"
                android:gravity="top"
                android:hint="@string/description"
                android:textCursorDrawable="@drawable/cursor_blue"
                android:inputType="textMultiLine"
                android:minHeight="56dp"
                android:minLines="1"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/albumText"
                android:textColorHint="@color/albumText"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="17dp"
            android:paddingTop="24dp"
            android:paddingEnd="17dp"
            android:paddingBottom="24dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createButton"
                android:layout_width="378dp"
                android:layout_height="44dp"
                android:background="@drawable/bg_btn_create"
                android:backgroundTint="@color/not_active"
                android:enabled="false"
                android:fontFamily="@font/ys_display_medium"
                android:stateListAnimator="@null"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textFontWeight="500"
                android:textSize="16sp" />
        </FrameLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>